# padmec-amr

./: CMakeLists.txt  Makefile  ProjectHome.md  README  include.h  main.cpp  mesh.cpp  mesh.h  quad_preprocessor.cpp  read.cpp  refine.cpp  refine_QUAD.cpp  refine_TETRA.cpp  refine_TRI.cpp  refresh.sh  utilities.cpp  utilities.h  write.cpp
CodeTest/: Makefile
CodeTest/include/: includes.h  includes.h.gch
CodeTest/src/: main.cpp
branches/ParMesh/: Makefile  MeshStatistic.txt  include.h  main.cpp  mesh-create.cpp  mesh.cpp  mesh.h  mesh_parallel.cpp  quad_preprocessor.cpp  read.cpp  refine.cpp  refine_TETRA.cpp  refine_TRI.cpp  write.cpp
branches/ParMesh/meshes/: 2D.geo  2d.msh  (+3 more)
branches/multigrid/: Makefile  refresh.sh
branches/simulador/src/: CMakeLists.txt  main.cpp
branches/simulador/src/SIMULATION_core/: CMakeLists.txt  SIMULATION_adaptation.cpp  SIMULATION_core__solvers.cpp
branches/simulador/src/adaptation/: AMR.h
branches/simulador/src/adaptation/adaptive-remeshing/: .directory  CMakeLists.txt  FileManager.cpp  Geometria2D  MRE.h  Rebuilder2.h
branches/simulador/src/adaptation/h-refinement/: H_Refinement_2D.cpp  H_Refinement_2D.h  SpecialElements_2D.cpp
branches/simulador/src/adaptation/rh-refinement/: ._RH_Refinement.cpp  CMakeLists.txt  RH_Refinement.cpp  RH_Refinement.h
branches/simulador/src/elliptic/EBFV/: EBFV1_PressureGradient.cpp
branches/simulador/src/error-analysis/: CMakeLists.txt  CalculateSmoothGradientNorm.cpp  ErrorAnalysis.cpp  ErrorAnalysis.h
branches/simulador/src/high-order/: CMakeLists.txt  HighOrderApproximation.cpp  SL__Woodfield.cpp  SaturationGradient.cpp  SlopeLimiterFunctions.h
branches/simulador/src/hyperbolic/: EBFV1_advanceSaturation.cpp  EBFV1_hyperbolic.h  EBFV1_hyperbolic_MIMPES.cpp  SaturationGradient.cpp
branches/simulador/src/interpolation/: IhR_main.cpp  interpolation.cpp
branches/simulador/src/pre-processor/EBFV1/: EBFV1__pre-processors.cpp
branches/simulador/src/pre-processor/EBFV1_modified/: EBFV1_modified.cpp  assemblyMatrix_A.cpp  rockProperties.cpp
branches/simulador/src/tools/: AttachData.h  Boundary_Conditions.cpp  CPU_Profiling.h  Exception.cpp  LoadMeshAdaptationParameters.cpp  LoadSimulatorParameters.cpp  MeshData2.cpp  OilProductionManagement.cpp  SimParStrucs.h  SimulatorParameters.cpp  SimulatorParameters2.cpp  auxiliar.cpp  exportVTK.h
branches/simulador/src/tools/GeomData/: GeomData3.cpp  GeomData_AllocateMemory.cpp  GeomData_Mapping.cpp  GeomData_TransferData.cpp  GeomData_initialize.cpp
include/: Controller_V.h  Elliptic_equation.h  Hyperbolic_equation.h  MG_1D.h  SIMULATION_core.h  grid1D.h  gridGenerator.h  libincludes.h  solverEquation_methods.h
libraries/: README  script-1  script-2
meshes/: 3D-teste-ref.msh  FS3D_Helmig-ref.msh  FS3D_Helmig-test(2).msh  Quad.msh  Symmetry.geo  t1.msh  teste-one-element.msh
simulation-parameters/3D_simulations/: Legenda
src/: Controller_V.cpp  MG_1D.cpp  MG_1D.h  SetOperator.cpp  grid1D.cpp  gridGenerator.cpp  main.cpp
src/SIMULATION_core/: SIMULATION_adaptation.cpp  SIMULATION_core.cpp  SIMULATION_core__solvers.cpp  testingAdaptation.cpp
src/V-cycle/: Controller_V.cpp  Controller_V.h
src/adaptation/: AMR.h  CMakeLists.txt
src/elliptic/: CMakeLists.txt  EBFV1_AssemblyMatVec.cpp  EBFV1_DefectCorrectionSolver.cpp  EBFV1_E.cpp  EBFV1_F_gamma.cpp  EBFV1_F_omega.cpp  EBFV1_G.cpp  EBFV1_PressureGradient.cpp  EBFV1__MatrixFreeSolver.cpp  EBFV1_elliptic.cpp  EBFV1_elliptic.h  EBFV1_pressure_gradient.cpp  EBFV1_pressure_gradient.cpp.backup  set_SOE.cpp
src/error-analysis/: CalculateDegreeOfRefinement_2D.cpp  CalculateElementsError.cpp  CalculateElementsError_2D.cpp  CalculateGlobalError.cpp  CalculateSmoothGradientNorm.cpp  CalculateSmoothGradientNorm_2D.cpp  Calculate_heights.cpp  ErrorAnalysis.cpp  ErrorAnalysis.h  ErrorAnalysisAuxiliar.cpp  ErrorAnalysis_2D.h  ErrorAnalysis_MIMPES_Adapt.cpp
src/high-order/: HighOrderApproximation.h  SL__MUSCL.cpp  SL__Woodfield.cpp  SL__functions.h  SaturationGradient.cpp
src/hyperbolic/: EBFV1_advanceSaturation.cpp  EBFV1_advectiveTerm.cpp  EBFV1_hyperbolic-adaptative.cpp  EBFV1_hyperbolic.cpp  EBFV1_hyperbolic.h  EBFV1_hyperbolic_MIMPES.cpp  EBFV1_hyperbolic_MIMPES.h  EBFV1_hyperbolic_MIMPES_Adapt.h  EBFV1_hyperbolic_adaptative.h  EBFV1_velocityField.cpp  SaturationGradient.cpp  explicit-advance.cpp
src/interpolation/: IAR_calculate.cpp  IAR_gradients.cpp  IAR_main.cpp  interpolation.cpp  interpolation.h
src/pre-processor/: CMakeLists.txt  Calculate-Cij-parallel.cpp  Calculate-Vi-parallel.cpp  EBFV1-2D-pp.cpp  EBFV1-3D-pp.cpp  EBFV1__pre-processors.cpp  EBFV1_preprocessor.cpp  setCorrectNumberOfRemoteCopies.cpp
src/smoother/: smoother.cpp  smoother.h
src/tools/: AttachData.h  CPU_Profiling.h  Exception.h  GeomData.cpp  GeomData.h  GeomData_AllocateMemory.cpp  GeomData_Mapping.cpp  GeomData_calculate.cpp  GeomData_initialize.cpp  LoadMeshAdaptationParameters.cpp  LoadSimulatorParameters.cpp  Matrix.h  MeshData.cpp  MeshData.h  MeshData2.cpp  OilProductionManagement.cpp  OilProductionManagement.h  PhysicPropData.cpp  PhysicPropData.h  PhysicPropData2.cpp  PointerStruct.h  Restart.cpp  Restart.h  SimulatorParameters.cpp  SimulatorParameters.h  auxiliar.cpp  auxiliar.h  export-VTK2.cpp  exportVTK.cpp  exportVTK.h  load_EBFV1_PreProcessorData.cpp  residualCalculator.cpp
trunk/: Makefile  README.txt
trunk/include/: Elliptic_equation.h  Hyperbolic_equation.h  SIMULATION_core.h  includes.h  solverEquation_methods.h
trunk/src/: CMakeLists.txt  main.cpp
(+256 files in other folders)
